--- a/android-app/app/src/main/res/menu/activity_main_drawer.xml
+++ b/android-app/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,7 +9,7 @@
             android:icon="@drawable/ic_menu_camera"
             android:title="@string/menu_home" />
         <item
-            android:id="@+id/history"
+            android:id="@+id/nav_history"
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/menu_history" />
         <item
