--- a/android-app/app/src/main/res/layout/fragment_home.xml
+++ b/android-app/app/src/main/res/layout/fragment_home.xml
@@ -100,7 +100,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/text_predicted_ebike" />
 
-    <Button
+    <ToggleButton
         android:id="@+id/button_start"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
