--- a/android-app/app/src/main/res/layout/fragment_home.xml
+++ b/android-app/app/src/main/res/layout/fragment_home.xml
@@ -107,7 +107,8 @@
         android:layout_marginStart="36dp"
         android:layout_marginEnd="36dp"
         android:layout_marginBottom="32dp"
-        android:background="#009688"
+        android:background="@color/primaryColor"
+        android:textColor="@color/primaryTextColor"
         android:text="@string/start_scanning"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
