--- a/android-app/app/src/main/res/values/colors.xml
+++ b/android-app/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!--?xml version="1.0" encoding="UTF-8"?-->
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+  <color name="primaryColor">#2e7d32</color>
+  <color name="primaryLightColor">#60ad5e</color>
+  <color name="primaryDarkColor">#005005</color>
+  <color name="primaryTextColor">#ffffff</color>
+  <color name="primaryTextColorInverted">#000000</color>
 </resources>
