--- a/android-app/app/src/main/res/values/dimens.xml
+++ b/android-app/app/src/main/res/values/dimens.xml
@@ -6,4 +6,7 @@
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="default_padding">16dp</dimen>
+    <dimen name="list_item_title_size">16sp</dimen>
+    <dimen name="secondary_text">14sp</dimen>
+    <dimen name="circular_main_image">180dp</dimen>
 </resources>
