--- a/android-app/app/src/main/res/layout/fragment_history.xml
+++ b/android-app/app/src/main/res/layout/fragment_history.xml
@@ -9,4 +9,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/menu_history"/>
+
+    <ListView
+        android:id="@+id/history_list_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </LinearLayout>
