--- a/android-app/app/src/main/res/layout/item_leg.xml
+++ b/android-app/app/src/main/res/layout/item_leg.xml
@@ -18,7 +18,7 @@
         android:layout_height="40dp"
         android:layout_marginTop="16dp"
         android:scaleType="centerInside"
-        android:src="@drawable/icon_home" />
+        android:src="@drawable/icon_foot" />
 
     <LinearLayout
         android:id="@+id/lines_container"
