home fragment ui, no live updates yet tho

--- a/android-app/app/src/main/res/layout/activity_trip_completed.xml
+++ b/android-app/app/src/main/res/layout/activity_trip_completed.xml
@@ -110,6 +110,7 @@
         android:layout_alignParentBottom="true"
         android:background="@color/primaryColor"
         android:text="Cool, thanks!"
+        android:onClick="onDoneButtonPressed"
         android:textColor="@android:color/white" />
 </LinearLayout>
 
