--- a/android-app/app/src/main/res/layout/fragment_home.xml
+++ b/android-app/app/src/main/res/layout/fragment_home.xml
@@ -15,7 +15,7 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_weight="2">
 
             <RelativeLayout
                 android:layout_width="@dimen/circular_main_image"
@@ -46,45 +46,58 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="2"
-            android:orientation="horizontal"
-            android:paddingLeft="40dp"
-            android:paddingRight="40dp">
+            android:layout_weight="1"
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="vertical">
+                android:orientation="horizontal"
+                android:paddingLeft="40dp"
+                android:paddingRight="40dp"
+                android:paddingBottom="@dimen/default_padding">
 
-                <TextView
-                    android:id="@+id/home_distance_travelled"
-                    style="@style/trip_summary_info_title"
-                    android:text="15km" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="vertical">
 
-                <TextView
-                    style="@style/trip_summary_info_subtext"
-                    android:text="Distance \nTraveled" />
+                    <TextView
+                        android:id="@+id/home_distance_travelled"
+                        style="@style/trip_summary_info_title"
+                        android:text="15km" />
+
+                    <TextView
+                        style="@style/trip_summary_info_subtext"
+                        android:text="Distance \nTraveled" />
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <Chronometer
+                        android:id="@+id/home_chronometer"
+                        style="@style/trip_summary_info_title"
+                        android:text="0:14" />
+
+                    <TextView
+                        style="@style/trip_summary_info_subtext"
+                        android:text="Trip \nDuration" />
+                </LinearLayout>
             </LinearLayout>
 
-
-            <LinearLayout
+            <GridView
+                android:id="@+id/home_predictions"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <Chronometer
-                    android:id="@+id/home_chronometer"
-                    style="@style/trip_summary_info_title"
-                    android:text="0:14" />
-
-                <TextView
-                    style="@style/trip_summary_info_subtext"
-                    android:text="Trip \nDuration" />
-            </LinearLayout>
+                android:layout_height="match_parent"
+                android:numColumns="2"/>
 
         </LinearLayout>
     </LinearLayout>
