--- a/android-app/app/src/main/res/layout/item_leg.xml
+++ b/android-app/app/src/main/res/layout/item_leg.xml
@@ -35,7 +35,7 @@
         android:paddingBottom="16dp">
 
         <TextView
-            android:id="@+id/item_leg_trip_title_type"
+            android:id="@+id/item_leg_type"
             style="@style/TextAppearance.AppCompat.Body2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -43,7 +43,7 @@
             tools:text="First Line" />
 
         <TextView
-            android:id="@+id/item_leg_distance_covered"
+            android:id="@+id/item_leg_length"
             style="@style/TextAppearance.AppCompat.Body1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
