fixed history fragment, now we just need to pimp that ui

--- a/android-app/app/src/main/res/layout/fragment_history.xml
+++ b/android-app/app/src/main/res/layout/fragment_history.xml
@@ -1,23 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="@dimen/default_padding"
+    android:orientation="vertical">
 
-    <LinearLayout
+    <ListView
+        android:id="@+id/history_list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <TextView
-            android:id="@+id/text_history"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/menu_history"/>
+        android:layout_height="match_parent" />
 
-        <ListView
-            android:id="@+id/history_list_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </LinearLayout>
-
-</ScrollView>
+</LinearLayout>
