--- a/android-app/app/src/main/res/layout/activity_trip_completed.xml
+++ b/android-app/app/src/main/res/layout/activity_trip_completed.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/default_padding"
-    tools:context=".TripCompletedActivity">
+    tools:context=".TripSummaryActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
