--- a/android-app/app/src/main/res/layout/fragment_transportation_modes_stats.xml
+++ b/android-app/app/src/main/res/layout/fragment_transportation_modes_stats.xml
@@ -3,8 +3,10 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <com.github.mikephil.charting.charts.PieChart
+        android:id="@+id/transportation_modes_pie_chart"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/tvLabel"/>
+        android:layout_margin="@dimen/default_padding"/>
+
 </LinearLayout>
