implemented delete funtionality in history on swipe and press

--- a/android-app/app/src/main/res/layout/item_leg.xml
+++ b/android-app/app/src/main/res/layout/item_leg.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/two_line_item"
+    android:id="@+id/top_wrapper"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?selectableItemBackground"
@@ -54,12 +54,13 @@
     <!-- Can be replaced by a widget -->
     <TextView
         android:id="@+id/item_leg_emissions"
-        android:text="200g"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp"
+        android:text="200g" />
 </RelativeLayout>
+
