--- a/android-app/app/src/main/res/layout/item_trip.xml
+++ b/android-app/app/src/main/res/layout/item_trip.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item_trip_swipe_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -23,61 +24,91 @@
             android:scaleType="fitEnd" />
     </LinearLayout>
 
-
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/top_wrapper"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="6dip">
+        android:background="?selectableItemBackground"
+        android:clickable="true"
+        android:minHeight="72dp"
+        android:paddingStart="?listPreferredItemPaddingLeft"
+        android:paddingLeft="?listPreferredItemPaddingLeft"
+        android:paddingEnd="?listPreferredItemPaddingRight"
+        android:paddingRight="?listPreferredItemPaddingRight">
 
-        <TextView
-            android:id="@+id/item_trip_date"
-            android:layout_width="fill_parent"
-            android:layout_height="26dip"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:maxLines="1"
-            android:text="Date"
-            android:textSize="16sp" />
+        <ImageView
+            android:id="@+id/item_trip_icon"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_centerVertical="true"
+            android:scaleType="centerInside"
+            android:src="@drawable/icon_foot" />
 
-        <TextView
-            android:id="@+id/item_trip_distance"
-            android:layout_width="fill_parent"
-            android:layout_height="26dip"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:maxLines="1"
-            android:text="Distance traveled"
-            android:textSize="12sp" />
+        <LinearLayout
+            android:id="@+id/lines_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignWithParentIfMissing="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_toStartOf="@+id/item_leg_emissions"
+            android:layout_toEndOf="@+id/item_trip_icon"
+            android:orientation="vertical"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp">
 
-        <TextView
-            android:id="@+id/item_trip_modes"
-            android:layout_width="fill_parent"
-            android:layout_height="26dip"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:maxLines="1"
-            android:text="Modes used"
-            android:textSize="12sp" />
+            <TextView
+                android:id="@+id/item_trip_date"
+                style="@style/TextAppearance.AppCompat.Body2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                tools:text="Date" />
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/item_trip_distance"
+                    style="@style/TextAppearance.AppCompat.Body1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:singleLine="true"
+                    tools:text="Trip Length" />
+                <TextView
+                    android:id="@+id/item_trip_duration"
+                    style="@style/TextAppearance.AppCompat.Body1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:singleLine="true"
+                    tools:text="Trip Duration" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/item_trip_modes"
+                style="@style/TextAppearance.AppCompat.Body1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:singleLine="true"
+                tools:text="Modes used" />
+        </LinearLayout>
+
+        <!-- Can be replaced by a widget -->
         <TextView
             android:id="@+id/item_trip_footprint"
-            android:layout_width="fill_parent"
-            android:layout_height="26dip"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:maxLines="1"
-            android:text="Emissions"
-            android:textSize="12sp" />
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:text="200g" />
+    </RelativeLayout>
 
-        <TextView
-            android:id="@+id/item_trip_duration"
-            android:layout_width="fill_parent"
-            android:layout_height="26dip"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:maxLines="1"
-            android:text="Duration"
-            android:textSize="12sp" />
-    </LinearLayout>
 </com.daimajia.swipe.SwipeLayout>
