--- a/android-app/app/src/main/res/layout/fragment_history.xml
+++ b/android-app/app/src/main/res/layout/fragment_history.xml
@@ -8,6 +8,7 @@
     <ListView
         android:id="@+id/history_list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:focusable="true" />
 
 </LinearLayout>
