--- a/android-app/app/src/main/res/layout/fragment_home.xml
+++ b/android-app/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:keepScreenOn="true"
-    android:orientation="vertical" >
+    android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -15,91 +16,87 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="2">
-
-            <RelativeLayout
-                android:layout_width="@dimen/circular_main_image"
-                android:layout_height="@dimen/circular_main_image"
-                android:layout_gravity="center"
-                android:background="@drawable/green_circle_background"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/home_emissions"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:text="@string/home_emissions"
-                    android:textColor="@color/primaryTextColor"
-                    android:textSize="40sp" />
-
-                <TextView
-                    style="@style/trip_summary_info_subtext"
-                    android:layout_below="@id/home_emissions"
-                    android:layout_centerHorizontal="true"
-                    android:textColor="@color/primaryTextColor"
-                    android:text="CO2 Emitted" />
-            </RelativeLayout>
-
-        </FrameLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical">
+            android:layout_weight="1.4"
+            android:background="@color/primaryDarkColor">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingLeft="40dp"
-                android:paddingRight="40dp"
-                android:paddingBottom="@dimen/default_padding">
+                android:layout_height="match_parent"
+                android:padding="@dimen/default_padding"
+                android:gravity="center_vertical"
+                android:orientation="vertical">
+                <TextView
+                    android:text="ongoing journey"
+                    android:textColor="@android:color/white"
+                    style="@style/home_text_view_label"
+                    android:textStyle=""/>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="vertical">
+                <TextView
+                    android:id="@+id/home_current_mode"
+                    android:text="mode"
+                    android:textColor="@android:color/white"
+                    style="@style/home_text_view_big"
+                    android:textSize="50sp"/>
 
-                    <TextView
-                        android:id="@+id/home_distance_travelled"
-                        style="@style/trip_summary_info_title"
-                        android:text="@string/home_distance_travelled" />
-
-                    <TextView
-                        style="@style/trip_summary_info_subtext"
-                        android:text="Distance \nTraveled" />
-                </LinearLayout>
+                <TextView
+                    android:text="5 December"
+                    android:textColor="@android:color/white"
+                    style="@style/home_text_view_big"
+                    android:textSize="30sp"
+                    android:textStyle=""/>
 
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <Chronometer
-                        android:id="@+id/home_chronometer"
-                        style="@style/trip_summary_info_title"
-                        android:text="0:14" />
-
-                    <TextView
-                        style="@style/trip_summary_info_subtext"
-                        android:text="Trip \nDuration" />
-                </LinearLayout>
             </LinearLayout>
 
-            <GridView
+        </FrameLayout>
+
+            <LinearLayout
                 android:id="@+id/home_predictions"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:numColumns="2"/>
+                android:layout_weight="1"
+                android:padding="@dimen/default_padding"
+                android:gravity="center_vertical"
+                android:orientation="vertical">
 
-        </LinearLayout>
+                <LinearLayout style="@style/EqualSpacingCenterVerticalLL">
+                    <TextView
+                        android:id="@+id/home_emissions"
+                        android:text="@string/home_emissions"
+                        style="@style/home_text_view_value" />
+
+                    <TextView
+                        android:text="grams"
+                        style="@style/home_text_view_label" />
+
+                </LinearLayout>
+
+                <LinearLayout style="@style/EqualSpacingCenterVerticalLL">
+                    <TextView
+                        android:id="@+id/home_distance_travelled"
+                        android:text="@string/home_distance_travelled"
+                        style="@style/home_text_view_value" />
+
+                    <TextView
+                        android:text="meters"
+                        style="@style/home_text_view_label" />
+
+                </LinearLayout>
+
+                <LinearLayout style="@style/EqualSpacingCenterVerticalLL">
+                    <Chronometer
+                        android:id="@+id/home_chronometer"
+                        style="@style/home_text_view_value"/>
+
+                    <TextView
+                        android:text="minutes"
+                        style="@style/home_text_view_label" />
+
+                </LinearLayout>
+
+
+            </LinearLayout>
+
     </LinearLayout>
 
     <ToggleButton
@@ -108,8 +105,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/default_padding"
         android:background="@color/primaryColor"
+        android:textOff="@string/start_scanning"
         android:textColor="@color/primaryTextColor"
-        android:text="@string/start_scanning"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
