--- a/android-app/app/src/main/res/layout/app_bar_main.xml
+++ b/android-app/app/src/main/res/layout/app_bar_main.xml
@@ -14,9 +14,13 @@
         app:popupTheme="@style/AppTheme.PopupOverlay" />
 
 
-    <include layout="@layout/content_main"
-        android:layout_height="match_parent"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_marginTop="?attr/actionBarSize"/>
+        android:layout_height="match_parent">
+
+        <include layout="@layout/content_main"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent" />
+    </FrameLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
